--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@ h2 {
 <div class="bg-text">
   <h2>"Dan setiap Orang yang mengetok, Baginya pintu dibukakan"</h2>
   <h1 style="font-size:40px;">Matius 7:8</h1>
-  <a href="/KEP/LandingPage.html" class="btn-home"> <i class="uil uil-envelope-check"> </i>Open The Door
-  </a>
+  <button href="/KEP/LandingPage.html" class="btn-home"> <i class="uil uil-envelope-check"> </i>Open The Door
+  </button>
 </div>
 
 </body>
