--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ h2 {
 <div class="bg-text">
   <h2>"Dan setiap Orang yang mengetok, Baginya pintu dibukakan"</h2>
   <h1 style="font-size:40px;">Matius 7:8</h1>
-  <a href="/LandingPage.html" class="btn-home"> <i class="uil uil-envelope-check"> </i>Open The Door
+  <a href="https://github.com/eliaangga/KEP/blob/main/LandingPage.html" class="btn-home"> <i class="uil uil-envelope-check"> </i>Open The Door
   </a>
 </div>
 
