--- a/LandingPage.html
+++ b/LandingPage.html
@@ -198,7 +198,7 @@
     </nav>
     <main>
         <audio autoplay>
-            <source src="Assets/song/MENGENALMU - MICHELA THEA.mp3.mp3" type="audio/mpeg">
+            <source src="Assets/song/MENGENALMU - MICHELA THEA.mp3" type="audio/mpeg">
           </audio>
           
     </main>
