--- a/index.html
+++ b/index.html
@@ -88,12 +88,12 @@ h2 {
     <a href="/LandingPage.html" class="btn-home"> <i class="uil uil-envelope-check"> </i>Open The Door </a>
   </div>
   
-  <!-- <div class="bg-text bg-text-bawah">
-    <h2 style="font-size:10px;">Kepada Yth: </h2>
-    <h1 style="font-size:10px;">Bapak-Ibu, Saudara/I, OMK </h1>
-    <h1 style="font-size:10px;">Yang Terkasih Dalam Nama </h1>
-    <h1 style="font-size:10px;">Kristus Yesus</h1>
-  </div>   -->
+  <div class="bg-text bg-text-bawah">
+    <h2 style="font-size:15px;">Kepada Yth: </h2>
+    <h1 style="font-size:15px;">Bapak-Ibu, Saudara/I, OMK </h1>
+    <h1 style="font-size:15px;">Yang Terkasih Dalam Nama </h1>
+    <h1 style="font-size:15px;">Kristus Yesus</h1>
+  </div>  
 
 </body>
 </html>
